up to date new agents, command, rules, skills - 20260626